syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

enum DeviceType {
    LightDeviceType = 0;
    SocketDeviceType = 1;
    SwitchDeviceType = 2;
    HubDeviceType = 3;

    PurifierDeviceType = 4;
    HumidifierDeviceType = 5;
    VacuumCleanerDeviceType = 6;

    CookingDeviceType = 7;
    KettleDeviceType = 8;
    CoffeeMakerDeviceType = 9;

    ThermostatDeviceType = 10;
    AcDeviceType = 11;

    MediaDeviceDeviceType = 12;
    TvDeviceDeviceType = 13;
    ReceiverDeviceType = 14;
    TvBoxDeviceType = 15;

    WashingMachineDeviceType = 16;

    OpenableDeviceType = 17;
    CurtainDeviceType = 18;

    SmartSpeakerDeviceType = 19;
    YandexStationDeviceType = 20;
    YandexStation2DeviceType = 21;
    YandexStationMiniDeviceType = 22;
    DexpSmartBoxDeviceType = 23;
    IrbisADeviceType = 24;
    ElariSmartBeatDeviceType = 25;
    LGXBoomDeviceType = 26;
    JetSmartMusicDeviceType = 27;
    PrestigioSmartMateDeviceType = 28;
    DigmaDiHomeDeviceType = 29;
    JBLLinkPortableDeviceType = 30;
    JBLLinkMusicDeviceType = 31;

    YandexModuleDeviceType = 32;

    RemoteCarDeviceType = 33;

    OtherDeviceType = 34;

    YandexStationMini2DeviceType = 35;

    DishwasherDeviceType = 36;

    MulticookerDeviceType = 37;
    RefrigeratorDeviceType = 38;
    FanDeviceType = 39;
    IronDeviceType = 40;

    SensorDeviceType = 41;

    YandexModule2DeviceType = 42;
    YandexStationMicroDeviceType = 43;

    PetFeederDeviceType = 44;

    YandexStationCentaurDeviceType = 45;

    LightCeilingDeviceType = 46;
    LightLampDeviceType = 47;
    LightStripDeviceType = 48;

    YandexStationMidiDeviceType = 49;
    YandexStationMini2NoClockDeviceType = 50;

    CameraDeviceType = 51;

    YandexStationChironDeviceType = 52;
    YandexStationPholDeviceType = 53;
}
